# utube

./: Procfile  README.md  manage.py  pyproject.toml  requirements.txt
main_app/: admin.py  forms.py  models.py  urls.py  views.py
main_app/migrations/: 0001_initial.py  0002_video_view.py  0003_alter_video_description.py  0004_comment.py  0005_alter_comment_options_alter_video_options_and_more.py  0006_media.py  0007_alter_comment_body_alter_video_description_and_more.py
main_app/templates/: 403.html  404.html  500.html  base.html  comment_delete_confirmation.html  comment_update.html  home.html  search_result.html  video_create.html  video_delete_confirmation.html  video_detail.html  video_update.html
main_app/templates/registration/: login.html  signup.html
main_app/templates/users/: edit.html  profile.html
planning/: proposal.md
staticfiles/: staticfiles.json
staticfiles/scripts/: extra.580d692838aa.js
utube/: asgi.py  settings.py  urls.py  wsgi.py
