[tool.poetry]
name = "utube"
version = "0.1.0"
description = ""
authors = ["ukakit <106052696+ukakit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.*"
django = "^4.1.3"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
